<!--
  ~ Copyright (C) 2019
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining
  ~ a copy of this software and associated documentation files (the
  ~ "Software"), to deal in the Software without restriction, including
  ~ without limitation the rights to use, copy, modify, merge, publish,
  ~ distribute, sublicense, and/or sell copies of the Software, and to
  ~ permit persons to whom the Software is furnished to do so, subject to
  ~ the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be
  ~ included in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  ~ MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
  ~ BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
  ~ ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  ~ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<resources>
  <string name="app_name">Pasbox</string>

  <string name="cancel">Cancel</string>

  <string name="install">Install</string>
  <string name="update">Update</string>

  <string name="insecure_device">We\'ve detected that your device is not secure. Pasbox can\'t guarantee the safety of
    your passwords stored on this device and you will not be able to use our online services. You may use Pasbox only
    on this device if you wish.</string>

  <string name="missing_google_play_services">Google Play Services are not installed on this device. Pasbox needs them
    to guarantee the safety of your passwords. You will not be able to use our online services, but you may continue
    using Pasbox only on this device.</string>

  <string name="old_google_play_services">Your device has an old version of Google Play Services. Pasbox requires the
    latest version of Google Play Services to guarantee the safety of your passwords. You will not be able to use our
    online services until you update Google Play Services. You may continue to use Pasbox only on this device.</string>

  <string name="updating_google_play_services">Your device is updating Google Play Services and until that has finished
    you\'ll have limited options to use Pasbox.</string>

  <string name="setup_keyguard">Secure Device</string>
  <string name="keyguard_not_setup">Your device is not secured by PIN/Pattern/Password/Fingerprint. Although you can
    continue to use Pasbox, we strongly recommend you secure your device.</string>

  <string name="setup_fingerprint">Setup Fingerprint</string>
  <string name="fingerprint_not_setup">Your device supports fingerprinting, so we suggest you set it up. This will make
    it much harder for anyone to impersonate you.</string>

  <string name="password_title">Title</string>
  <string name="password_title_helper_text">Website, Username, Profile, Title, ...</string>
  <string name="password_features">Features</string>
  <string name="password_feature_multicase">AbC</string>
  <string name="password_feature_digits">123</string>
  <string name="password_feature_specials">#!@</string>
  <string name="password_size">Size</string>
  <string name="password_size_short">Short</string>
  <string name="password_size_normal">Normal</string>
  <string name="password_size_huge">Huge</string>
  <string name="password_value">Password</string>
  <string name="password_touch_to_save">Touch to save</string>
  <string name="password_saving">Saving…</string>
  <string name="password_saved">Saved!</string>
  <string name="password_save_failed">Save failed, touch to try again</string>
  <string name="password_keyguard_title">Save Password</string>
  <string name="password_keyguard_description">Enter your device PIN, password, pattern or fingerprint to save your new password securely.</string>
  <string name="password_saving_failed_keyguard">Uh-oh. Touch to try again</string>
</resources>
