<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining
  ~ a copy of this software and associated documentation files (the
  ~ "Software"), to deal in the Software without restriction, including
  ~ without limitation the rights to use, copy, modify, merge, publish,
  ~ distribute, sublicense, and/or sell copies of the Software, and to
  ~ permit persons to whom the Software is furnished to do so, subject to
  ~ the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be
  ~ included in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  ~ MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
  ~ BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
  ~ ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  ~ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<me.stojan.pasbox.ui.UICreatePassword
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/card_create_secret_password"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:clipChildren="false"
  android:clipToPadding="false"
  >

  <com.google.android.material.textfield.TextInputLayout
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:helperText="@string/password_title_helper_text"
    app:helperTextEnabled="true"
    app:boxStrokeWidth="3dp"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password_title"
      android:singleLine="true"
      />
  </com.google.android.material.textfield.TextInputLayout>

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/marginVertical"
    >

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:gravity="end|center_vertical"
      android:layout_weight="0"
      android:text="@string/password_features"
      />

    <View
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_weight="1"
      />

    <com.google.android.material.chip.ChipGroup
      android:id="@+id/features"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="0"
      app:chipSpacingHorizontal="8dp"
      >

      <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:id="@+id/feature_multicase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_feature_multicase"
        android:checked="true"
        app:chipStrokeWidth="3dp"
        />

      <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:id="@+id/feature_digits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_feature_digits"
        android:checked="true"
        app:chipStrokeWidth="3dp"
        />

      <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:id="@+id/feature_specials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_feature_specials"
        android:checked="true"
        app:chipStrokeWidth="3dp"
        />

    </com.google.android.material.chip.ChipGroup>
  </LinearLayout>

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/marginVertical"
    >

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:gravity="end|center_vertical"
      android:layout_weight="0"
      android:text="@string/password_size"
      />

    <View
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_weight="1"
      />

    <com.google.android.material.chip.ChipGroup
      android:id="@+id/size"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="0"
      app:chipSpacingHorizontal="8dp"
      app:singleSelection="true"
      >

      <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:id="@+id/size_short"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_size_short"
        />

      <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:id="@+id/size_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_size_normal"
        android:checked="true"
        />

      <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:id="@+id/size_huge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_size_huge"
        />
    </com.google.android.material.chip.ChipGroup>
  </LinearLayout>

  <com.google.android.material.textfield.TextInputLayout
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:helperTextEnabled="true"
    app:boxStrokeWidth="3dp"
    android:layout_marginTop="@dimen/marginVertical"
    android:layout_marginBottom="@dimen/marginVertical"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password_value"
      android:singleLine="true"

      />
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:id="@+id/save"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/marginVertical"
    android:paddingBottom="@dimen/marginVertical"
    android:gravity="center"
    android:text="@string/password_touch_to_save"
    />

</me.stojan.pasbox.ui.UICreatePassword>